# futureshots

./: .gitignore  pyproject.toml
src/futureshots/: manage.py
src/futureshots/activity_tracker/: apps.py  models.py
src/futureshots/api/: urls.py
src/futureshots/api/authentication/: serializers.py  urls.py  views.py
src/futureshots/api/v0/: urls.py
src/futureshots/api/v0/findings/: serializers.py  views.py
src/futureshots/api/v0/shots/: serializers.py  views.py
src/futureshots/api/v0/users/: serializers.py  views.py
src/futureshots/apps/activity_tracker/: apps.py
src/futureshots/apps/comments/: models.py
src/futureshots/apps/discussions/: models.py
src/futureshots/apps/futureshots/: asgi.py  settings.py
src/futureshots/apps/shots/: apps.py  models.py
src/futureshots/apps/users/: models.py
src/futureshots/core/: urls.py
src/futureshots/futureshots/: urls.py  wsgi.py
src/futureshots/futureshots/settings/: __init__.py  django.py  paths.py  rest_framework.py
src/futureshots/settings/: __init__.py  database.py  defaults.py  django.py  paths.py  rest_framework.py
src/futureshots/shots/: models.py
src/futureshots/users/: models.py
src/futureshots/utils/: permisssions.py  serializers.py
